--- a/src/components/HeaderSection/Header.css
+++ b/src/components/HeaderSection/Header.css
@@ -23,7 +23,7 @@ header {
 }
 .header__container,
 .header__main_container {
-  max-width: 1100px;
+  max-width: 1500px;
   margin: auto;
   display: flex;
   justify-content: center;
@@ -35,7 +35,7 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 .header__nav_logo {
   background-repeat: no-repeat;
@@ -43,7 +43,7 @@ header {
   background-position: center;
   display: flex;
   width: 100%;
-  height: 150px;
+  height: 100px;
   cursor: pointer;
 }
 .header__nav_links {
@@ -78,40 +78,37 @@ header {
 }
 
 .header__main_title {
-  color: #fff;
-  -webkit-text-stroke: 0.2px #ffea00;
-  font-size: 45px;
+  color: #CBC986;
+  /* -webkit-text-stroke: 0.1px #ffea00; */
+  font-size: 79px;
   margin: 0;
-  letter-spacing: 5px;
+  letter-spacing: 4px;
+  font-family: "Alumni Sans";
+  font-weight: 600;
+  height: 72px;
 }
 .header__main_title:nth-child(2) {
-  margin-bottom: 30px;
-}
-#dayz_word {
-  font-family: "Bowlby One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #fff !important;
-  -webkit-text-stroke: 0px;
+  margin-bottom: 150px;
 }
 .header__main_underTitle_text {
   font-size: 18px;
   color: #fff;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 .underTitle_second {
-  -webkit-text-stroke: 0.1px #ffea00 !important;
   font-size: 20px;
+  font-weight: 200;
   font-family: "Calistoga";
 }
 .header__main_ip_port {
   color: #fff;
-  font-weight: bold;
+  font-weight: 200;
   font-size: 30px;
   font-family: "Bowlby One";
   letter-spacing: 2px;
   display: flex;
   flex-direction: column;
+  -webkit-text-stroke: 0.5px #000;
 }
 
 @media (max-width: 1200px) {
