--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
 .copyright {
-  height: 50px;
   padding: 10px 0;
   text-align: center;
   font-size: 14px;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.705);
+}
+@media (max-width:540px) {
+}
+@media (max-width:540px) {
+  .copyright {
+    padding: 20px 0;
+  }
 }
