--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
   justify-content: center;
   align-items: center;
   color: #fff;
-  background-color: rgba(0, 0, 0, 0.705);
+  background-color: rgb(100, 100, 100);
+  margin-top: 112px;
 }
 @media (max-width:540px) {
 }
