--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,19 @@
   background-color: rgb(100, 100, 100);
   margin-top: 112px;
 }
-@media (max-width:540px) {
+
+@media (max-width:1024px) {
+  .copyright {
+    margin-top: 215px;
+  }
+}
+@media (max-width:800px) {
+  .copyright {
+    margin-top: 250px;
+    position: absolute;
+    left: 0;
+    right: 0;
+  }
 }
 @media (max-width:540px) {
   .copyright {
