--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,15 @@
-.copyright {
-  padding: 10px 0;
-  text-align: center;
-  font-size: 14px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  background-color: rgb(100, 100, 100);
-  margin-top: 112px;
+.App {
+  padding-bottom: 50px;
+  position: relative;
 }
 
-@media (max-width:1024px) {
-  .copyright {
-    margin-top: 215px;
+@media (max-width: 580px) {
+  .App {
+    padding-bottom: 200px;
   }
 }
-@media (max-width:800px) {
-  .copyright {
-    margin-top: 250px;
-    position: absolute;
-    left: 0;
-    right: 0;
-  }
-}
-@media (max-width:540px) {
-  .copyright {
-    padding: 20px 0;
+@media (max-width: 450px) {
+  .App {
+    padding-bottom: 100px;
   }
 }
